# Tenggouwa-site

./: .editorconfig  .gitignore  .lighthouserc.cjs  AGENTS.md  CLAUDE.md  README.md  TODO.md  findings.md  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  progress.md  task_plan.md  tsconfig.base.json
apps/mac-agent/: README.md  install.sh  pyproject.toml  uninstall.sh
apps/mac-agent/agent/: main.py
apps/server/: .dockerignore  .env.prod.sample  .env.sample  .env.umami.sample  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.umami.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  setup_dev_env.sh
apps/server/alembic/: env.py
apps/server/alembic/versions/: 20260521_0000_initial.py  20260521_0200_analytics.py  20260521_0300_admin_totp.py  20260521_0400_agent_terminal.py  20260522_0100_seo_vitals_snapshots.py  20260522_0200_widen_vitals_rating.py  20260525_0100_pg_trgm_search.py  20260617_0100_pi_snapshot.py  20260617_0300_casino.py  20260617_0400_casino_blackjack.py  20260618_0100_casino_mines.py  20260618_0200_casino_zhajinhua.py  20260618_0300_pi_artifact.py  20260623_0100_pi_probe.py  20260625_0100_casino_videopoker.py  20260703_0100_kb.py  20260706_0100_kb_embedding.py  20260708_0100_agent_session.py  20260709_0100_agent_pending.py  20260709_0200_agent_epoch.py  20260715_0100_agent_session_owner.py  20260716_0100_kb_concept_graph.py  20260718_0100_agent_memory.py  20260720_0100_agent_message_seq_unique.py  20260722_0100_agent_inbox.py  20260724_0100_mail.py
apps/server/app/: main.py
apps/server/app/common/: __init__.py  access_formatter.py  config_manager.py  rate_limit.py  route_trace_context.py  setup_logging.py
apps/server/app/config/: config-prod.yml  config-test.yml  config.yml  logging_config.yml
apps/server/app/db/: __init__.py  models.py  pg.py
apps/server/app/dependencies/: __init__.py  detailed_http_exception.py  jwt_auth.py
apps/server/app/middlewares/: __init__.py  global_exception_middleware.py  router_logging_middleware.py
apps/server/app/modules/: __init__.py  common_schema.py
apps/server/app/modules/agent/: __init__.py  auth.py  repository.py  router.py  scheduler.py  schema.py  service.py
apps/server/app/modules/analytics/: repository.py  router.py  schema.py  service.py  ua.py
apps/server/app/modules/auth/: router.py  schema.py  service.py
apps/server/app/modules/casino/: blackjack.py  games.py  niuniu.py  repository.py  router.py  schema.py  service.py  videopoker.py  zhajinhua.py
apps/server/app/modules/inspirations/: repository.py  router.py  schema.py  service.py
apps/server/app/modules/kb/: __init__.py  auto.py  graph.py  provider.py  repository.py  router.py  scheduler.py  schema.py  service.py
apps/server/app/modules/mail/: __init__.py  extract.py  repository.py  router.py  schema.py  service.py
apps/server/app/modules/mcp/: bridge.py  manager.py
apps/server/app/modules/memory/: store.py
apps/server/app/modules/pi/: exec.py  repository.py  router.py  schema.py  service.py
apps/server/app/modules/posts/: repository.py  router.py  schema.py  service.py
apps/server/app/modules/search/: __init__.py  repository.py  router.py  schema.py  service.py
apps/server/scripts/: dump_openapi.py
apps/server/tests/: agent_harness.py  conftest.py  test_agent_auth.py  test_agent_file_e2e.py  test_agent_loop.py  test_agent_sessions.py  test_agent_skills.py  test_auth_password.py  test_browser.py  test_cancel_cleanup.py  test_file_ops.py  test_git_ops.py  test_kb_auto.py  test_kb_graph.py  test_kb_graph_search.py  test_kb_search_cite.py  test_live_skill_routing.py  test_live_smoke.py  test_mail_extract.py  test_mail_inboxes.py  test_mail_ingest.py  test_mail_query.py  test_mcp_bridge.py  test_mcp_manager.py  test_memory.py  test_parallel_tools.py  test_permissions.py  test_pi_exec.py  test_proactive.py  test_provider_stream.py  test_rate_limit.py  test_reflect.py  test_result_status.py  test_search_highlight.py  test_seo_helpers.py  test_skills_channel.py  test_subagent.py  test_totp_tokens.py  test_turn_cap.py  test_ua.py  (+1 more)
(+303 files in other folders)
