[project]
name = "tenggouwa-server"
version = "0.0.1"
description = "Tenggouwa monorepo backend (FastAPI)."
readme = "README.md"
requires-python = ">=3.12,<3.13"

dependencies = [
    "PyYAML==6.0.3",
    "SQLAlchemy==2.0.50",
    "alembic==1.18.4",
    "asyncpg==0.30.0",
    "bcrypt==5.0.0",
    "click==8.4.1",
    "concurrent-log-handler==0.9.29",
    "fastapi==0.136.3",
    "greenlet==3.2.3",
    "gunicorn==26.0.0",
    "httpx[http2]==0.28.1",
    "h2==4.3.0",
    "psutil==7.2.2",
    "pydantic==2.13.4",
    "PyJWT==2.13.0",
    "pyotp==2.9.0",
    "python-dotenv==1.2.2",
    "python-multipart==0.0.20",
    "redis==8.0.0",
    "starlette==0.46.2",
    "uvicorn[standard]==0.35.0",
    "uvicorn-worker==0.3.0",
    "uvloop==0.21.0",
    # SEO 调度 + GSC API
    "APScheduler==3.11.2",
    "google-auth==2.53.0",
    "google-api-python-client==2.197.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.4.0",
    "ruff==0.15.16",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "ARG", "SIM", "ICN", "PLW", "PLR", "PLE", "FIX"]
ignore = [
    "E203",
    "PLR0913",
    "PLR0915",
    "PLR2004",
    # FastAPI Depends() as default argument is the canonical pattern
    "B008",
    # Unused method/function args are often kept for interface compatibility
    "ARG002",
    "ARG004",
    # Existing complex routers; track as tech debt, don't block CI gate
    "PLR0912",
    # Module-level scheduler singleton legitimately uses `global`
    "PLW0603",
    # Style preference; existing code uses try/except/pass intentionally
    "SIM105",
    # PEP 695 generic syntax is opt-in; existing Generic[T] is fine
    "UP046",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true

[tool.pytest.ini_options]
testpaths = ["tests"]
log_cli = true
log_cli_level = "INFO"
addopts = "-v --tb=short --capture=no"
asyncio_default_fixture_loop_scope = "session"
asyncio_mode = "auto"
pythonpath = ["app"]
